@@ -162,6 +162,7 @@ mkPopsae=function(popsa) { # this replaces the version above it
       #       select(-agerec)%>%
       mutate(sex=factor(sex,labels=c("male","female")))
     canc=mapCancs(canc)
+    canc=mapCODs(canc)
     # if ("radiatn"%in%names(canc)) canc=mapTrts(canc)
     canc=mapTrts(canc)
     delT=proc.time() - ptm  
